Se agrego texto en Shared Error

--- a/WebConsultaSGTD/WebConsultaSGTD/Views/Shared/Error.cshtml
+++ b/WebConsultaSGTD/WebConsultaSGTD/Views/Shared/Error.cshtml
@@ -9,6 +9,7 @@
     <hgroup>
         <h1>Error.</h1>
         <h2>Error al procesar la solicitud.</h2>
+        <h3>Error Interno</h3>
     </hgroup>
 </body>
 </html>
